@@ -126,12 +126,8 @@ include_once(LIB_DIR . DIRECTORY_SEPARATOR . 'definitions.php');
 /*
 require_once(LIB_DIR . DIRECTORY_SEPARATOR . 'unstrip.php');
 require_once(LIB_DIR . DIRECTORY_SEPARATOR . 'common.php');
-require_once(LIB_DIR . DIRECTORY_SEPARATOR . 'SYSLOG.class.php');
 
-if (ConfigHelper::checkConfig('phpui.logging') && class_exists('SYSLOG'))
-	$SYSLOG = new SYSLOG($DB);
-else
-	$SYSLOG = null;
+$SYSLOG = SYSLOG::getInstance();
 */
 
 $ih = @imap_open("{" . ConfigHelper::getConfig('dsn-handler.server') . "}INBOX", ConfigHelper::getConfig('dsn-handler.username'), ConfigHelper::getConfig('dsn-handler.password'));
