@@ -85,7 +85,7 @@ require_once(LIB_DIR . DIRECTORY_SEPARATOR . 'definitions.php');
 // Initialize LMS class
 
 $SESSION = new Session($DB, ConfigHelper::getConfig('phpui.timeout'));
-$AUTH = new Auth($DB, $SESSION, $SYSLOG);
+$AUTH = new Auth($DB, $SESSION);
 $SYSLOG = null;
 $LMS = new LMS($DB, $AUTH, $SYSLOG);
 $LMS->ui_lang = $_ui_language;
